# aicosts

./: .gitignore  README.md  pyproject.toml
src/aicosts/: cli.py  config.py  paths.py  reports.py
src/aicosts/providers/: anthropic.py  base.py  claude.py  codex.py  gcp.py  github.py  openai.py  subscriptions.py  twilio.py
src/aicosts/storage/: db.py  raw.py
tests/: test_providers_claude_codex.py  test_storage_and_reports.py  test_subscriptions.py
